[package]
name = "heapsize"
version = "0.3.2"
authors = [ "The Servo Project Developers" ]
description = "Infrastructure for measuring the total runtime size of an object on the heap"
license = "MPL-2.0"
repository = "https://github.com/servo/heapsize"
build = "build.rs"

[build-dependencies]
semver = "0.2"

[features]
unstable = []
