[package]
name = "heapsize"
version = "0.3.2"
authors = [ "The Servo Project Developers" ]
description = "Infrastructure for measuring the total runtime size of an object on the heap"
license = "MPL-2.0"
repository = "https://github.com/servo/heapsize"
build = "build.rs"

[build-dependencies]
regex = "0.1"

[dependencies]
kernel32-sys = "0.2.1"

[features]
unstable = []
