[package]
name = "heapsize_derive"
version = "0.1.0"
authors = ["The Servo Project Developers"]
description = "Automatically generating infrastructure for measuring the total runtime size of an object on the heap"
license = "MPL-2.0"
repository = "https://github.com/servo/heapsize"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
syn = "0.10"
quote = "0.3"
