[package]
name = "heapsize_derive"
version = "0.1.4"
authors = ["The Servo Project Developers"]
description = "Automatically generating infrastructure for measuring the total runtime size of an object on the heap"
license = "MIT/Apache-2.0"
repository = "https://github.com/servo/heapsize"

[lib]
path = "lib.rs"
proc-macro = true

[[test]]
name = "test"
path = "test.rs"

[dependencies]
syn = "0.14"
quote = "0.6"
synstructure = "0.9"
proc-macro2 = "0.4.18"

[dev-dependencies]
heapsize = { path = ".." }
