[package]
name = "heapsize"
version = "0.1.0"
authors = [ "The Servo Project Developers" ]
description = "Infrastructure for measuring the total runtime size of an object on the heap"
license = "MPL-2.0"
repository = "https://github.com/servo/heapsize"

[lib]
name = "heapsize"
path = "lib.rs"

[dependencies]
libc = "0.1"

[dependencies.heapsize_macros]
path = "../heapsize_macros"
