[package]
name = "heapsize_plugin"
version = "0.1.2"
authors = ["The Servo Project Developers"]
description = "Automatically generating infrastructure for measuring the total runtime size of an object on the heap"
license = "MPL-2.0"
repository = "https://github.com/servo/heapsize"

[lib]
name = "heapsize_plugin"
path = "src/lib.rs"
plugin = true

[dev-dependencies]
heapsize = {path = ".."}
